[ai]change homepage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <html data-wf-domain=portfolio-course-rw.webflow.io data-wf-page=5eb98b2079b4fc0adc5a89f4 data-wf-site=5eb98b2079b4fc247b5a89f3 data-wf-status=1 lang=en class="w-mod-js wf-sen-n4-active wf-sen-n7-active wf-sen-n8-active wf-active w-mod-ix" style><!--
+<!DOCTYPE html> <html class="w-mod-js wf-sen-n4-active wf-sen-n7-active wf-sen-n8-active wf-active w-mod-ix" style><!--
  Page saved with SingleFile
  url: 
  saved date: Tue Feb 27 2024 14:19:56 GMT+0800 (China Standard Time)
