[ai]change homepage

--- a/blogs/bangladeshi-shapoo.html
+++ b/blogs/bangladeshi-shapoo.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Discover top Bangladeshi shampoo brands offering quality hair care solutions. Explore the best options for your hair with our guide.">
     <meta name="keywords" content="Bangladeshi shampoo brands, Bangladeshi hair care, shampoo brands Bangladesh">
     <!-- Additional meta tags for SEO can be added here -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1787767549858436"
+            crossorigin="anonymous"></script>
     <style>
         body {
             background-image: url('background-image.jpg');
