[ai]change homepage

--- a/blogs/air_traffic_control_internship.html
+++ b/blogs/air_traffic_control_internship.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="air traffic control internship, aviation internship, ATC internship, intern in aviation, air traffic control career">
     <meta name="author" content="Your Name">
     <link rel="icon" href="https://metabyte.cloudns.be/logo.png" type="image/png">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1787767549858436"
+            crossorigin="anonymous"></script>
     <style>
         /* Add your CSS styles here */
         body {
