[ai]what-is-artificial-intelligence.html

--- a/tools/xml.html
+++ b/tools/xml.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://metabyte.cloudns.be/logo.png" type="image/png">
     <title>XML 解析器</title>
     <style>
         /* 样式可以根据需要进行修改 */
