--- a/tools/yaml.html
+++ b/tools/yaml.html
@@ -6,6 +6,7 @@
     <title>Compare and Merge YAML Files</title>
     <meta name="description" content="Effortlessly compare and merge YAML files with our intuitive online tool. Easily spot key differences between two YAML files and seamlessly merge missing keys. Streamline your workflow and boost productivity now!">
     <meta name="keywords" content="YAML, YAML file comparison, YAML merge, YAML diff, online tool, productivity tool, compare YAML files, merge YAML files, analyze YAML files, YAML editor, developer tool">
+    <link rel="icon" href="https://metabyte.cloudns.be/logo.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
