--- a/tools/json.html
+++ b/tools/json.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON 解析器</title>
+    <link rel="icon" href="https://metabyte.cloudns.be/logo.png" type="image/png">
     <style>
         /* 样式可以根据需要进行修改 */
         body {
