--- a/tools/sitemap.html
+++ b/tools/sitemap.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://metabyte.cloudns.be/logo.png" type="image/png">
     <title>Google Sitemap Validator</title>
     <style>
         /* 添加样式 */
