--- a/ai/index.html
+++ b/ai/index.html
@@ -5,6 +5,7 @@
 -->
 <head>
 <meta charset=utf-8>
+<meta http-equiv="Content-Security-Policy" content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
 <meta name=renderer content=webkit>
 <meta name=force-rendering content=webkit>
 <meta http-equiv=X-UA-Compatible content="IE=edge, chrome=1">
