--- a/tools/html-online-editor.html
+++ b/tools/html-online-editor.html
@@ -18,6 +18,8 @@
             overflow: hidden;
         }
         textarea {
+            background: #15202b;
+            color: white;
             width: 50%;
             height: 100%;
             border: none;
