--- a/blogs/bangladeshi-shapoo.html
+++ b/blogs/bangladeshi-shapoo.html
@@ -76,6 +76,7 @@
     </style>
 </head>
 <body>
+<script src="/blogs/blogs-manage.js"></script>
 <header>
     <h1>Exploring Bangladeshi Shampoo Brands</h1>
 </header>
