--- a/blogs/header.html
+++ b/blogs/header.html
@@ -6,15 +6,15 @@
         <div class="navigation-wrapper ">
             <div class="row basis-auto">
                 <div class="logo_col col-xs col-sm-fit">
-                    <a class="text-logo" data-type="group"  data-dynamic-mod="true" href="https://www.dineshkumarvm.com/">Meta<span style="font-weight: 300;" class="span12"> Nelson</span> Kent</a>	        </div>
+                    <a class="text-logo" data-type="group"  data-dynamic-mod="true" href="/">Meta<span style="font-weight: 300;" class="span12"> Nelson</span> Kent</a>	        </div>
                 <div class="main_menu_col col-xs">
-                    <div id="mainmenu_container" class="row"><ul id="main_menu" class="active-line-bottom main-menu dropdown-menu"><li id="menu-item-281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-281"><a href="https://www.dineshkumarvm.com/">Home</a></li>
-                        <li id="menu-item-280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="https://www.dineshkumarvm.com/about-me/">About Me</a></li>
-                        <!--<li id="menu-item-439" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-439"><a href="https://www.dineshkumarvm.com/portfolio/">Portfolio</a></li>-->
-                        <!--<li id="menu-item-1265" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><a href="https://www.dineshkumarvm.com/books/">My Books</a></li>-->
-                        <!--<li id="menu-item-1387" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1387"><a href="https://www.dineshkumarvm.com/videos/">Videos</a></li>-->
-                        <li id="menu-item-169" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-213 current_page_item current_page_parent menu-item-169"><a href="https://www.dineshkumarvm.com/blog/" aria-current="page">Blog</a></li>
-                        <li id="menu-item-438" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-438"><a href="https://www.dineshkumarvm.com/contact-me/">Contact Me</a></li>
+                    <div id="mainmenu_container" class="row"><ul id="main_menu" class="active-line-bottom main-menu dropdown-menu"><li id="menu-item-281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-281"><a href="/">Home</a></li>
+                        <li id="menu-item-280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="/about-me/">About Me</a></li>
+                        <!--<li id="menu-item-439" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-439"><a href="/portfolio/">Portfolio</a></li>-->
+                        <!--<li id="menu-item-1265" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><a href="/books/">My Books</a></li>-->
+                        <!--<li id="menu-item-1387" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1387"><a href="/videos/">Videos</a></li>-->
+                        <li id="menu-item-169" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-213 current_page_item current_page_parent menu-item-169"><a href="/blogs" aria-current="page">Blog</a></li>
+                        <li id="menu-item-438" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-438"><a href="/">Contact Me</a></li>
                     </ul></div>    <a href="#" data-component="offcanvas" data-target="#offcanvas-wrapper" data-direction="right" data-width="300px" data-push="false">
                     <div class="bubble"></div>
                     <i class="fa fa-bars"></i>
@@ -22,15 +22,15 @@
                     <div id="offcanvas-wrapper" class="hide force-hide  offcanvas-right">
                         <div class="offcanvas-top">
                             <div class="logo-holder">
-                                <a class="text-logo" data-type="group"  data-dynamic-mod="true" href="https://www.dineshkumarvm.com/">Dinesh<span style="font-weight: 300;" class="span12"> Kumar</span> VM</a>            </div>
+                                <a class="text-logo" data-type="group"  data-dynamic-mod="true" href="/">Dinesh<span style="font-weight: 300;" class="span12"> Kumar</span> VM</a>            </div>
                         </div>
-                        <div id="offcanvas-menu" class="menu-menu-container"><ul id="offcanvas_menu" class="offcanvas_menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-281"><a href="https://www.dineshkumarvm.com/">Home</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="https://www.dineshkumarvm.com/about-me/">About Me</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-439"><a href="https://www.dineshkumarvm.com/portfolio/">Portfolio</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><a href="https://www.dineshkumarvm.com/books/">My Books</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1387"><a href="https://www.dineshkumarvm.com/videos/">Videos</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-213 current_page_item current_page_parent menu-item-169"><a href="https://www.dineshkumarvm.com/blog/" aria-current="page">Blog</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-438"><a href="https://www.dineshkumarvm.com/contact-me/">Contact Me</a></li>
+                        <div id="offcanvas-menu" class="menu-menu-container"><ul id="offcanvas_menu" class="offcanvas_menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-281"><a href="/">Home</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="/about-me/">About Me</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-439"><a href="/portfolio/">Portfolio</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><a href="/books/">My Books</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1387"><a href="/videos/">Videos</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-213 current_page_item current_page_parent menu-item-169"><a href="/blog/" aria-current="page">Blog</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-438"><a href="/contact-me/">Contact Me</a></li>
                         </ul></div>
                     </div>
                 </div>
