--- a/blogs/air_traffic_control_internship.html
+++ b/blogs/air_traffic_control_internship.html
@@ -18,7 +18,7 @@
             padding: 0;
         }
         header {
-            background-color: #007bff;
+            /*background-color: #647588;*/
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -37,6 +37,7 @@
     </style>
 </head>
 <body>
+<script src="/blogs/blogs-manage.js"></script>
 <header>
     <h1>Air Traffic Control Internship</h1>
 </header>
