--- a/blogs/index.html
+++ b/blogs/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">
+    <link data-react-helmet=true href=https://metabyte.cloudns.be/logo.png rel="shortcut icon" type=image/vnd.microsoft.icon>
 
     <script>
       (function (exports, d) {
