[tools] markdown-editor.html

--- a/tools/index.html
+++ b/tools/index.html
@@ -63,6 +63,7 @@
         <li><a class="tool-button" href="/tools/yaml.html">YAML Viewer</a></li>
         <li><a class="tool-button" href="/tools/xml.html">XML Parser</a></li>
         <li><a class="tool-button" href="/tools/json.html">JSON Parser</a></li>
+        <li><a class="tool-button" href="/tools/markdown-editor.html">Markdown Editor</a></li>
         <!-- Add more tools as needed -->
     </ul>
 </div>
