[tools] markdown-editor.html

--- a/tools/index.html
+++ b/tools/index.html
@@ -4,6 +4,13 @@
     <script src="/blogs/blogs-manage.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore a suite of online tools for web development including an HTML editor, YAML viewer, XML parser, JSON parser, and Markdown editor.">
+    <meta name="keywords" content="HTML editor, YAML viewer, XML parser, JSON parser, Markdown editor, web development tools, online tools">
+    <meta name="author" content="Meta Nelson Kent">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Explore Our Tools - Web Development Tools | Meta Nelson Kent">
+    <meta property="og:description" content="Explore a suite of online tools for web development including an HTML editor, YAML viewer, XML parser, JSON parser, and Markdown editor.">
+
     <title>Tools Entry Page</title>
     <style>
         body {
