--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,9 @@ label {
                 href=#Work class="nav-link w-nav-link">Work</a>
             <a href="/blogs"
                class="nav-link w-nav-link">Blogs</a>
+
+            <a href="/tools"
+               class="nav-link w-nav-link">Tools</a>
             <a
                 href=#Contact class="nav-link button w-nav-link">Contact</a></nav>
         <div class="menu-button w-nav-button sf-hidden"></div>
