--- a/blogs/header.html
+++ b/blogs/header.html
@@ -9,7 +9,7 @@
                     <a class="text-logo" data-type="group"  data-dynamic-mod="true" href="/">Meta<span style="font-weight: 300;" class="span12"> Nelson</span> Kent</a>	        </div>
                 <div class="main_menu_col col-xs">
                     <div id="mainmenu_container" class="row"><ul id="main_menu" class="active-line-bottom main-menu dropdown-menu"><li id="menu-item-281" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-281"><a href="/">Home</a></li>
-                        <li id="menu-item-280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="/about-me/">About Me</a></li>
+                        <li id="menu-item-280" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="/">About Me</a></li>
                         <!--<li id="menu-item-439" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-439"><a href="/portfolio/">Portfolio</a></li>-->
                         <!--<li id="menu-item-1265" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><a href="/books/">My Books</a></li>-->
                         <!--<li id="menu-item-1387" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1387"><a href="/videos/">Videos</a></li>-->
@@ -25,7 +25,7 @@
                                 <a class="text-logo" data-type="group"  data-dynamic-mod="true" href="/">Dinesh<span style="font-weight: 300;" class="span12"> Kumar</span> VM</a>            </div>
                         </div>
                         <div id="offcanvas-menu" class="menu-menu-container"><ul id="offcanvas_menu" class="offcanvas_menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-281"><a href="/">Home</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="/about-me/">About Me</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-280"><a href="/">About Me</a></li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-439"><a href="/portfolio/">Portfolio</a></li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1265"><a href="/books/">My Books</a></li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1387"><a href="/videos/">Videos</a></li>
